--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,14 +9,14 @@ jobs:
         node-version:
           - '14'
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Install dependencies
       run: npm i
     - name: Add NPM token
-      if: github.ref == 'refs/heads/master'
+      if: github.ref == 'refs/heads/main'
       run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
       env:
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     - name: Build and Publish
-      if: github.ref == 'refs/heads/master'
-      run: ./bin.js --tag
+      if: github.ref == 'refs/heads/main'
+      run: ./bin.js
